k8s-deployment/loopin_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: face-detection-deployment
  namespace: "2401199"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: face-detection
  template:
    metadata:
      labels:
        app: face-detection
    spec:
      imagePullSecrets:
        - name: nexus-secret
      containers:
        - name: face-detection
          image: 127.0.0.1:30085/2401199-project/face-detection:latest
          ports:
            - containerPort: 8000

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 30

          volumeMounts:
            - name: static-media
              mountPath: /app/static

          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"

      volumes:
        - name: static-media
          persistentVolumeClaim:
            claimName: static-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: face-detection-service
  namespace: "2401199"
spec:
  selector:
    app: face-detection
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: face-detection-ingress
  namespace: "2401199"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: face.imcc.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: face-detection-service
                port:
                  number: 8000
